--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -2,25 +2,32 @@
     "helloWorld": "يا هلا",
     "@helloWorld": {},
     "sessionState": "حالة المحاضرة",
-    "sessionDuration" : "مدة المحاضرة",
-    "myAccount" : "حسابي",
-    "library" : "المكتبة",
-    "myPrograms" : "برامجي",
-    "thePrograms" : "البرامج",
-    "main" : "الرئيسية",
+    "sessionDuration": "مدة المحاضرة",
+    "myAccount": "حسابي",
+    "library": "المكتبة",
+    "myPrograms": "برامجي",
+    "thePrograms": "البرامج",
+    "main": "الرئيسية",
     "search": "اكتب للبحث",
     "most_popular": "الأكثر تداولا",
     "mostPopular": "الأكثر تداولا",
     "forYou": "مخصص لك",
     "mostSellers": "الأكثر مبيعا",
     "back": "عودة",
-    "aboutApp" : "عن التطبيق",
+    "aboutApp": "عن التطبيق",
     "accountData": "بيانات الحساب",
     "settings": "الإعدادات",
     "subscriptionManagement": "إدارة الاشتراكات",
     "studentManagement": "إدارة الطلاب",
-    "couponsAndRewards": "القسائم والمكافآت",
+    "couponsAndRewards": "الكوبونات والمكافآت",
     "notifications": "الإشعارات",
     "reportsAndComplaints": "التقارير والشكاوى",
-    "privacyPolicyAndUsage": "سياسة الخصوصية والاستخدام"
+    "privacyPolicyAndUsage": "سياسة الخصوصية والاستخدام",
+    "renewNow": "تجديد الآن",
+    "coursePrice": "سعر الإشتراك",
+    "studentNumberInCourse": "عدد الطلاب في الدورة",
+    "code": "الكود",
+    "redeemPoints": "استبدال النقاط",
+    "pointsBalance" : "رصيد النقاط",
+    "inviteFriends": "دعوة صديق"
 }
