chat view + its permissions

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -28,6 +28,10 @@
     "studentNumberInCourse": "عدد الطلاب في الدورة",
     "code": "الكود",
     "redeemPoints": "استبدال النقاط",
-    "pointsBalance" : "رصيد النقاط",
-    "inviteFriends": "دعوة صديق"
+    "pointsBalance": "رصيد النقاط",
+    "inviteFriends": "دعوة صديق",
+    "home": "الرئيسية",
+    "messages": "الرسائل",
+    "professors": "المعلمين",
+    "appManagement": "ادارة التطبيق"
 }
