home notification view

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -33,5 +33,6 @@
     "home": "الرئيسية",
     "messages": "الرسائل",
     "professors": "المعلمين",
-    "appManagement": "ادارة التطبيق"
+    "appManagement": "ادارة التطبيق",
+    "dates" :"الموعيد" 
 }
