--- a/lib/core/lang/app_en.arb
+++ b/lib/core/lang/app_en.arb
@@ -33,5 +33,6 @@
     "home": "Home",
     "messages": "Messages",
     "professors": "المعلمين",
-    "appManagement": "ادارة التطبيق"
+    "appManagement": "ادارة التطبيق",
+    "dates": "Dates"
 }
