meeting + meeting data screens + fix tab bar view unbounded height bug

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -34,5 +34,10 @@
     "messages": "الرسائل",
     "professors": "المعلمين",
     "appManagement": "ادارة التطبيق",
-    "dates" :"الموعيد" 
+    "dates" :"الموعيد",
+    "currentLecture": "المحاضرة الحالية",
+    "assignments" : "التسليمات",
+    "quizzes" : "الامتحانات",
+    "meetings" : "اللقاءات",
+    "nextLecture" :"المحاضرة القادمة"
 }
