leader board view

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -39,5 +39,9 @@
     "assignments" : "التسليمات",
     "quizzes" : "الامتحانات",
     "meetings" : "اللقاءات",
-    "nextLecture" :"المحاضرة القادمة"
+    "nextLecture" :"المحاضرة القادمة",
+    "goals" : "الاهداف",
+    "competitorsMenu" : "قائمة المنافسين",
+    "myStudent" :"طلابي",
+    "programLeader" :"المتصدرين بالبرنامج"
 }
