goal details view

--- a/lib/core/lang/app_en.arb
+++ b/lib/core/lang/app_en.arb
@@ -43,5 +43,6 @@
     "goals": "الاهداف",
     "competitorsMenu": "قائمة المنافسين",
     "myStudent": "طلابي",
-    "programLeader": "المتصدرين بالبرنامج"
+    "programLeader": "المتصدرين بالبرنامج",
+    "leaderboardMenu": "قائمة المتصدرين"
 }
