--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -1,48 +1,57 @@
 {
-    "helloWorld": "يا هلا",
-    "@helloWorld": {},
-    "sessionState": "حالة المحاضرة",
-    "sessionDuration": "مدة المحاضرة",
-    "myAccount": "حسابي",
-    "library": "المكتبة",
-    "myPrograms": "برامجي",
-    "thePrograms": "البرامج",
-    "main": "الرئيسية",
-    "search": "اكتب للبحث",
-    "most_popular": "الأكثر تداولا",
-    "mostPopular": "الأكثر تداولا",
-    "forYou": "مخصص لك",
-    "mostSellers": "الأكثر مبيعا",
-    "back": "عودة",
-    "aboutApp": "عن التطبيق",
-    "accountData": "بيانات الحساب",
-    "settings": "الإعدادات",
-    "subscriptionManagement": "إدارة الاشتراكات",
-    "studentManagement": "إدارة الطلاب",
-    "couponsAndRewards": "الكوبونات والمكافآت",
-    "notifications": "الإشعارات",
-    "reportsAndComplaints": "التقارير والشكاوى",
-    "privacyPolicyAndUsage": "سياسة الخصوصية والاستخدام",
-    "renewNow": "تجديد الآن",
-    "coursePrice": "سعر الإشتراك",
-    "studentNumberInCourse": "عدد الطلاب في الدورة",
-    "code": "الكود",
-    "redeemPoints": "استبدال النقاط",
-    "pointsBalance": "رصيد النقاط",
-    "inviteFriends": "دعوة صديق",
-    "home": "الرئيسية",
-    "messages": "الرسائل",
-    "professors": "المعلمين",
-    "appManagement": "ادارة التطبيق",
-    "dates" :"الموعيد",
-    "currentLecture": "المحاضرة الحالية",
-    "assignments" : "التسليمات",
-    "quizzes" : "الامتحانات",
-    "meetings" : "اللقاءات",
-    "nextLecture" :"المحاضرة القادمة",
-    "goals" : "الاهداف",
-    "competitorsMenu" : "قائمة المنافسين",
-    "myStudent" :"طلابي",
-    "programLeader" :"المتصدرين بالبرنامج",
-    "leaderboardMenu" : "قائمة المتصدرين"
+  "helloWorld": "يا هلا",
+  "@helloWorld": {},
+  "sessionState": "حالة المحاضرة",
+  "sessionDuration": "مدة المحاضرة",
+  "myAccount": "حسابي",
+  "library": "المكتبة",
+  "myPrograms": "برامجي",
+  "thePrograms": "البرامج",
+  "main": "الرئيسية",
+  "search": "اكتب للبحث",
+  "most_popular": "الأكثر تداولا",
+  "mostPopular": "الأكثر تداولا",
+  "forYou": "مخصص لك",
+  "mostSellers": "الأكثر مبيعا",
+  "back": "عودة",
+  "aboutApp": "عن التطبيق",
+  "accountData": "بيانات الحساب",
+  "settings": "الإعدادات",
+  "subscriptionManagement": "إدارة الاشتراكات",
+  "studentManagement": "إدارة الطلاب",
+  "couponsAndRewards": "الكوبونات والمكافآت",
+  "notifications": "الإشعارات",
+  "reportsAndComplaints": "التقارير والشكاوى",
+  "privacyPolicyAndUsage": "سياسة الخصوصية والاستخدام",
+  "renewNow": "تجديد الآن",
+  "coursePrice": "سعر الإشتراك",
+  "studentNumberInCourse": "عدد الطلاب في الدورة",
+  "code": "الكود",
+  "redeemPoints": "استبدال النقاط",
+  "pointsBalance": "رصيد النقاط",
+  "inviteFriends": "دعوة صديق",
+  "home": "الرئيسية",
+  "messages": "الرسائل",
+  "professors": "المعلمين",
+  "appManagement": "ادارة التطبيق",
+  "dates": "الموعيد",
+  "currentLecture": "المحاضرة الحالية",
+  "assignments": "التسليمات",
+  "quizzes": "الامتحانات",
+  "meetings": "اللقاءات",
+  "nextLecture": "المحاضرة القادمة",
+  "goals": "الاهداف",
+  "competitorsMenu": "قائمة المنافسين",
+  "myStudent": "طلابي",
+  "programLeader": "المتصدرين بالبرنامج",
+  "leaderboardMenu": "قائمة المتصدرين",
+  "setAppointmenta": "تعيين المواعيد",
+  "frommHour": "من الساعة",
+  "toHour": "إلى الساعة",
+  "students": "الطلاب",
+  "days": "الأيام",
+  "chooseAppropriateLecturer": "اختر المعلم المناسب",
+  "choose": "اختر",
+  "studentSchedules": "مواعيد الطلاب",
+  "next": "التالي"
 }
