subscription details view

--- a/lib/core/lang/app_en.arb
+++ b/lib/core/lang/app_en.arb
@@ -53,5 +53,7 @@
     "chooseAppropriateLecturer": "اختر المعلم المناسب",
     "choose": "اختر",
     "studentSchedules": "مواعيد الطلاب",
-    "next": "التالي"
+    "next": "التالي",
+    "subscriptionDetails": "تفاصيل الاشتراك"
+
 }
