--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -53,5 +53,6 @@
   "chooseAppropriateLecturer": "اختر المعلم المناسب",
   "choose": "اختر",
   "studentSchedules": "مواعيد الطلاب",
-  "next": "التالي"
+  "next": "التالي",
+  "subscriptionDetails": "تفاصيل الاشتراك"
 }
