package details view

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -54,5 +54,6 @@
   "choose": "اختر",
   "studentSchedules": "مواعيد الطلاب",
   "next": "التالي",
-  "subscriptionDetails": "تفاصيل الاشتراك"
+  "subscriptionDetails": "تفاصيل الاشتراك",
+  "packageDetails" : "تفاصيل المجموعة"
 }
