finish cancel session ui + change lecturer ui + show children

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -57,5 +57,6 @@
   "subscriptionDetails": "تفاصيل الاشتراك",
   "packageDetails": "تفاصيل المجموعة",
   "completePaymentProcess": "اتمام عملية الدفع",
-  "confirmPaymentProcess": "تأكيد عملية الدفع"
+  "confirmPaymentProcess": "تأكيد عملية الدفع",
+  "cancelSession": "الغاء المحاضرة"
 }
