handle flutter version upgrade + update all packages

--- a/lib/core/lang/app_en.arb
+++ b/lib/core/lang/app_en.arb
@@ -58,5 +58,6 @@
     "packageDetails": "تفاصيل المجموعة",
     "completePaymentProcess": "اتمام عملية الدفع",
     "confirmPaymentProcess": "تأكيد عملية الدفع",
-    "cancelSession": "الغاء المحاضرة"
+    "cancelSession": "الغاء المحاضرة",
+    "my_name": "m name"
 }
