enhance register view + handle chats view empty state issue (text color)

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -59,5 +59,49 @@
   "completePaymentProcess": "اتمام عملية الدفع",
   "confirmPaymentProcess": "تأكيد عملية الدفع",
   "cancelSession": "الغاء المحاضرة",
-  "my_name": "اسمي"
+  "my_name": "اسمي",
+  "createNewAccount": "إنشاء حساب جديد",
+  "firstName": "الاسم الأول",
+  "firstNameHint": "مصطفى",
+  "lastName": "الاسم الأخير",
+  "lastNameHint": "سلامة",
+  "email": "البريد الإلكتروني",
+  "emailHint": "example@email.com",
+  "phoneNumber": "رقم الهاتف",
+  "phoneHint": "01012345678",
+  "invalidPhone": "رقم الهاتف غير صحيح",
+  "whatsappNumber": "رقم واتساب",
+  "whatsappHint": "01012345678",
+  "invalidWhatsapp": "رقم واتساب غير صحيح",
+  "username": "اسم المستخدم",
+  "usernameHint": "username123",
+  "usernameRequired": "اسم المستخدم مطلوب",
+  "usernameMinLength": "اسم المستخدم يجب أن يكون 3 أحرف على الأقل",
+  "gender": "النوع",
+  "chooseGender": "اختر النوع",
+  "male": "ذكر",
+  "female": "أنثى",
+  "password": "كلمة المرور",
+  "passwordHint": "••••••••",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "createAccount": "إنشاء الحساب",
+  "retry": "إعادة المحاولة",
+  "alreadyHaveAccount": "هل لديك حساب بالفعل؟ ",
+  "login": "تسجيل الدخول",
+  "resetPassword": "إعادة تعيين كلمة السر",
+  "passwordResetSuccess": "تم تغيير كلمة السر بنجاح",
+  "verificationCodeSentTo": "تم إرسال رمز التحقق إلى",
+  "verificationCode": "رمز التحقق",
+  "enterVerificationCode": "أدخل رمز التحقق",
+  "pleaseEnterVerificationCode": "يرجى إدخال رمز التحقق",
+  "verificationCodeMinLength": "رمز التحقق يجب أن يكون على الأقل 4 أرقام",
+  "newPassword": "كلمة السر الجديدة",
+  "enterNewPassword": "أدخل كلمة السر الجديدة",
+  "pleaseEnterNewPassword": "يرجى إدخال كلمة السر الجديدة",
+  "passwordMinLength": "كلمة السر يجب أن تكون على الأقل 6 أحرف",
+  "confirmNewPassword": "أكد كلمة السر الجديدة",
+  "pleaseConfirmPassword": "يرجى تأكيد كلمة السر",
+  "passwordsDoNotMatch": "كلمة السر غير متطابقة",
+  "resendVerificationCode": "إعادة إرسال رمز التحقق",
+  "resendingCode": "جاري إعادة الإرسال..."
 }
