--- a/lib/core/lang/app_en.arb
+++ b/lib/core/lang/app_en.arb
@@ -1,4 +1,5 @@
 {
+
     "helloWorld": "Hello World!",
     "@helloWorld": {},
     "sessionState": "Session State",
@@ -39,25 +40,78 @@
     "assignments": "Assignments",
     "quizzes": "Quizzes",
     "meetings": "Meetings",
-    "nextLecture": "المحاضرة القادمة",
-    "goals": "الاهداف",
-    "competitorsMenu": "قائمة المنافسين",
-    "myStudent": "طلابي",
-    "programLeader": "المتصدرين بالبرنامج",
-    "leaderboardMenu": "قائمة المتصدرين",
-    "setAppointmenta": "تعيين المواعيد",
-    "frommHour": "من الساعة",
-    "toHour": "إلى الساعة",
-    "students": "الطلاب",
-    "days": "الأيام",
-    "chooseAppropriateLecturer": "اختر المعلم المناسب",
-    "choose": "اختر",
-    "studentSchedules": "مواعيد الطلاب",
-    "next": "التالي",
-    "subscriptionDetails": "تفاصيل الاشتراك",
-    "packageDetails": "تفاصيل المجموعة",
-    "completePaymentProcess": "اتمام عملية الدفع",
-    "confirmPaymentProcess": "تأكيد عملية الدفع",
-    "cancelSession": "الغاء المحاضرة",
-    "my_name": "m name"
+    "nextLecture": "Next Lecture",
+    "goals": "Goals",
+    "competitorsMenu": "Competitors Menu",
+    "myStudent": "My Students",
+    "programLeader": "Program Leaders",
+    "leaderboardMenu": "Leaderboard Menu",
+    "setAppointmenta": "Set Appointments",
+    "frommHour": "From Hour",
+    "toHour": "To Hour",
+    "students": "Students",
+    "days": "Days",
+    "chooseAppropriateLecturer": "Choose Appropriate Lecturer",
+    "choose": "Choose",
+    "studentSchedules": "Student Schedules",
+    "next": "Next",
+    "subscriptionDetails": "Subscription Details",
+    "packageDetails": "Package Details",
+    "completePaymentProcess": "Complete Payment Process",
+    "confirmPaymentProcess": "Confirm Payment Process",
+    "cancelSession": "Cancel Session",
+    "my_name": "My Name",
+    "createNewAccount": "Create New Account",
+    "firstName": "First Name",
+    "firstNameHint": "e.g. Mohamed",
+    "lastName": "Last Name",
+    "lastNameHint": "e.g. Ahmed",
+    "email": "Email Address",
+    "emailHint": "example@email.com",
+    "phoneNumber": "Phone Number",
+    "phoneHint": "e.g. 0123456789",
+    "invalidPhone": "Invalid phone number",
+    "whatsappNumber": "WhatsApp Number",
+    "whatsappHint": "e.g. 0123456789",
+    "invalidWhatsapp": "Invalid WhatsApp number",
+    "username": "Username",
+    "usernameHint": "e.g. username123",
+    "usernameRequired": "Username is required",
+    "usernameMinLength": "Username must be at least 3 characters",
+    "gender": "Gender",
+    "chooseGender": "Choose Gender",
+    "male": "Male",
+    "female": "Female",
+    "password": "Password",
+    "passwordHint": "••••••••",
+    "confirmPassword": "Confirm Password",
+    "createAccount": "Create Account",
+    "retry": "Retry",
+    "alreadyHaveAccount": "Already have an account? ",
+    "login": "Login",
+    "profileImageOptional": "Profile Image (Optional)",
+    "tapToUpload": "Tap to upload image",
+    "registrationSuccess": "Registration Successful",
+    "registrationFailed": "Registration Failed",
+    "pleaseWait": "Please wait...",
+    "continueToLogin": "Continue to Login",
+    "acceptTerms": "I accept the terms and conditions",
+    "termsError": "You must accept the terms and conditions",
+    "resetPassword": "Reset Password",
+    "passwordResetSuccess": "Password changed successfully",
+    "verificationCodeSentTo": "Verification code sent to",
+    "verificationCode": "Verification Code",
+    "enterVerificationCode": "Enter verification code",
+    "pleaseEnterVerificationCode": "Please enter verification code",
+    "verificationCodeMinLength": "Verification code must be at least 4 digits",
+    "newPassword": "New Password",
+    "enterNewPassword": "Enter new password",
+    "pleaseEnterNewPassword": "Please enter new password",
+    "passwordMinLength": "Password must be at least 6 characters",
+    "confirmNewPassword": "Confirm new password",
+    "pleaseConfirmPassword": "Please confirm password",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "resendVerificationCode": "Resend verification code",
+    "resendingCode": "Resending code..."
+
 }
