Add new localization keys and refactor language cubit
Added multiple new localization keys to both Arabic and English ARB files and updated the AppLocalizations classes accordingly. Refactored ApplanuageCubit to AppLanguageCubit, updated references throughout the codebase, and improved language storage handling. Fixed minor typos and improved context extensions for localization. Also updated network calls to use stored language preference for Accept-Language header.

--- a/lib/core/lang/app_ar.arb
+++ b/lib/core/lang/app_ar.arb
@@ -88,6 +88,14 @@
   "retry": "إعادة المحاولة",
   "alreadyHaveAccount": "هل لديك حساب بالفعل؟ ",
   "login": "تسجيل الدخول",
+  "profileImageOptional": "صورة الملف الشخصي (اختياري)",
+  "tapToUpload": "انقر لتحميل الصورة",
+  "registrationSuccess": "تم التسجيل بنجاح",
+  "registrationFailed": "فشل التسجيل",
+  "pleaseWait": "يرجى الانتظار...",
+  "continueToLogin": "المتابعة لتسجيل الدخول",
+  "acceptTerms": "أوافق على الشروط والأحكام",
+  "termsError": "يجب أن توافق على الشروط والأحكام",
   "resetPassword": "إعادة تعيين كلمة السر",
   "passwordResetSuccess": "تم تغيير كلمة السر بنجاح",
   "verificationCodeSentTo": "تم إرسال رمز التحقق إلى",
@@ -103,5 +111,77 @@
   "pleaseConfirmPassword": "يرجى تأكيد كلمة السر",
   "passwordsDoNotMatch": "كلمة السر غير متطابقة",
   "resendVerificationCode": "إعادة إرسال رمز التحقق",
-  "resendingCode": "جاري إعادة الإرسال..."
+  "resendingCode": "جاري إعادة الإرسال...",
+  "ourCommunity": "مجتمعنا",
+  "failedToLoadMessages": "فشل في تحميل الرسائل",
+  "noMessagesWithInstructors": "لا توجد رسائل مع الأساتذة",
+  "startConversationWithInstructors": "ابدأ محادثة مع أساتذتك لطرح أسئلتك",
+  "noMessagesWithClients": "لا توجد رسائل مع العملاء",
+  "startConversationWithClients": "ابدأ محادثة مع العملاء لمتابعة استفساراتهم",
+  "age": "العمر",
+  "edit": "تعديل",
+  "forgotPassword": "نسيت كلمة السر",
+  "verificationCodeSent": "تم إرسال رمز التحقق إلى بريدك الإلكتروني",
+  "forgotPasswordQuestion": "نسيت كلمة السر؟",
+  "forgotPasswordDescription": "لا تقلق! أدخل بريدك الإلكتروني وسنرسل لك رمز التحقق لإعادة تعيين كلمة السر",
+  "pleaseEnterEmail": "يرجى إدخال البريد الإلكتروني",
+  "pleaseEnterValidEmail": "يرجى إدخال بريد إلكتروني صحيح",
+  "sendVerificationCode": "إرسال رمز التحقق",
+  "backToLogin": "العودة لتسجيل الدخول",
+  "skip": "تخطي",
+  "tutorialFinished": "تم الانتهاء من الشرح",
+  "tutorialSkipped": "تم تخطي الشرح",
+  "reviewProgramsTutorial": "اضغط هنا لرؤية البرامج تحت المراجعة",
+  "noSubscriptions": "ليس لديك اشتراكات",
+  "subscribeNow": "اشترك الان",
+  "programsUnderReview": "لديك برامج في المراجعة",
+  "tapToAddSessions": "اضغط لإضافة حصص",
+  "alreadyStarted": "بدأت بالفعل",
+  "ongoingNow": "جارية الآن",
+  "notSpecified": "غير محدد",
+  "noDescription": "لا يوجد وصف",
+  "minutes": "دقيقة",
+  "audios": "صوتيات",
+  "menus": "القوائم",
+  "favourite": "المفضلة",
+  "noAudios": "لا يوجد صوتيات متاحة",
+  "noMenus": "لا يوجد قوائم متاحة",
+  "noFavs": "ليس لديك مفضلات",
+  "language": "اللغة",
+  "arabic": "عربي",
+  "english": "الإنجليزية",
+  "upcomingLectures": "المحاضرات القادمة",
+  "noUpcomingLectures": "لا محاضرات قادمة",
+  "noAudioContentAvailable": "لا توجد محتويات صوتية متاحة",
+  "noItemsInThisList": "لا يوجد عناصر في هذه القائمة",
+  "noNotifications": "لا توجد إشعارات",
+  "noNotificationsFound": "لم يتم العثور على أي إشعارات حتى الآن",
+  "refresh": "تحديث",
+  "programDetails": "تفاصيل البرنامج",
+  "programs": "البرامج",
+  "dataLoadError": "حدث خطأ في تحميل البيانات",
+  "checkInternetConnection": "تحقق من الاتصال بالإنترنت وحاول مرة أخرى",
+  "subscribeNowButton": "اشترك الآن",
+  "choosePlanDescription": "اختر بين مجموعة من الباقات و إستمتع بالمزايا الحصرية",
+  "saveDiscount": "وفر 20%",
+  "noAvailablePlans": "لا توجد باقات متاحة",
+  "planName": "إسم الباقة",
+  "monthly": "شهريا",
+  "studentsCount": "عدد الطلاب",
+  "subscribe": "إشتراك",
+  "startDate": "تاريخ البدء",
+  "startDateHint": "2025-05-15",
+  "yes": "نعم",
+  "no": "لا",
+  "confirmLogout": "هل انت متاكد من تسجيل الخروج",
+  "logout": "تسجيل الخروج",
+  "deleteAccount": "حذف الحساب",
+  "confirmDeleteAccount": "هل أنت متأكد من حذف الحساب؟",
+  "deleteAccountWarning": "سيتم حذف جميع بياناتك نهائياً ولا يمكن التراجع عن هذا الإجراء",
+  "programSubscriptionLoadError": "خطأ في تحميل اشتراكات البرامج",
+  "librarySubscriptionLoadError": "خطأ في تحميل اشتراكات المكتبة",
+  "noProgramSubscription" : "لا توجد اشتراكات برامج",
+  "noLibrarySubscription": "لا توجد اشتراكات مكتبة",
+  "all": "الكل",
+  "remain" : "متبقي"
 }
