--- a/lib/core/lang/app_en.arb
+++ b/lib/core/lang/app_en.arb
@@ -1,5 +1,4 @@
 {
-
     "helloWorld": "Hello World!",
     "@helloWorld": {},
     "sessionState": "Session State",
@@ -10,7 +9,7 @@
     "myAccount": "My Account",
     "library": "Library",
     "myPrograms": "My Programs",
-    "thePrograms": "The Programs",
+    "thePrograms": "Programs",
     "mostPopular": "Most Popular",
     "forYou": "For You",
     "mostSellers": "Best Sellers",
@@ -112,6 +111,77 @@
     "pleaseConfirmPassword": "Please confirm password",
     "passwordsDoNotMatch": "Passwords do not match",
     "resendVerificationCode": "Resend verification code",
-    "resendingCode": "Resending code..."
-
+    "resendingCode": "Resending code...",
+    "ourCommunity": "Our Community",
+    "failedToLoadMessages": "Failed to load messages",
+    "noMessagesWithInstructors": "No messages with instructors",
+    "startConversationWithInstructors": "Start a conversation with your instructors to ask questions",
+    "noMessagesWithClients": "No messages with clients",
+    "startConversationWithClients": "Start a conversation with clients to follow up on their inquiries",
+    "age": "age",
+    "edit": "Edit",
+    "forgotPassword": "Forgot Password",
+    "verificationCodeSent": "Verification code has been sent to your email",
+    "forgotPasswordQuestion": "Forgot Password?",
+    "forgotPasswordDescription": "Don't worry! Enter your email and we'll send you a verification code to reset your password",
+    "pleaseEnterEmail": "Please enter your email",
+    "pleaseEnterValidEmail": "Please enter a valid email",
+    "sendVerificationCode": "Send Verification Code",
+    "backToLogin": "Back to Login",
+    "skip": "Skip",
+    "tutorialFinished": "Tutorial finished",
+    "tutorialSkipped": "Tutorial skipped",
+    "reviewProgramsTutorial": "Click here to view programs under review",
+    "noSubscriptions": "You have no subscriptions",
+    "subscribeNow": "Subscribe now",
+    "programsUnderReview": "You have programs under review",
+    "tapToAddSessions": "Tap to add sessions",
+    "alreadyStarted": "Already started",
+    "ongoingNow": "Ongoing now",
+    "notSpecified": "Not specified",
+    "noDescription": "No description",
+    "minutes": "minutes",
+    "audios": "Audios",
+    "menus": "Menus",
+    "favourite": "Favourite",
+    "noAudios": "No available audios",
+    "noMenus": "No Available Menus",
+    "noFavs": "No Available Favourites",
+    "language": "Language",
+    "arabic": "Arabic",
+    "english": "English",
+    "upcomingLectures": "Upcoming Lectures",
+    "noUpcomingLectures": "No upcoming lectures",
+    "noAudioContentAvailable": "No audio content available",
+    "noItemsInThisList": "No items in this list",
+    "noNotifications": "No notifications",
+    "noNotificationsFound": "No notifications found yet",
+    "refresh": "Refresh",
+    "programDetails": "Program Details",
+    "programs": "Programs",
+    "dataLoadError": "An error occurred while loading data",
+    "checkInternetConnection": "Check your internet connection and try again",
+    "subscribeNowButton": "Subscribe Now",
+    "choosePlanDescription": "Choose from a variety of packages and enjoy exclusive benefits",
+    "saveDiscount": "Save 20%",
+    "noAvailablePlans": "No available plans",
+    "planName": "Plan Name",
+    "monthly": "monthly",
+    "studentsCount": "Number of Students",
+    "subscribe": "Subscribe",
+    "startDate": "Start Date",
+    "startDateHint": "2025-05-15",
+    "yes": "Yes",
+    "no": "No",
+    "confirmLogout": "Are you sure you want to log out?",
+    "logout": "Log out",
+    "deleteAccount": "Delete account",
+    "confirmDeleteAccount": "Are you sure you want to delete your account?",
+    "deleteAccountWarning": "All your data will be permanently deleted and this action cannot be undone.",
+    "programSubscriptionLoadError": "Error loading program subscriptions",
+    "librarySubscriptionLoadError": "Error loading library subscriptions",
+    "noProgramSubscription": "No program subscriptions",
+    "noLibrarySubscription": "No library subscriptions",
+    "all": "All",
+    "remain" : "remain"
 }
